--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ models/best.pt
 output_videos/output_video_player_with_ball.avi
 output_videos/output_video_team_ball_control.avi
 output_videos/output_video_camera_movement_and_adjust_track.avi
+output_videos/output_video_perspective_transform.avi
