--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ output_videos/output_video_camera_movement_and_adjust_track.avi
 output_videos/output_video_perspective_transform.avi
 output_videos/box_check.mp4
 output_videos/output_video_player_speed_and_distance.avi
+output_videos/output_video_player_speed_and_distance_2.avi
+output_videos/output_video_player_speed_and_distance_updated.avi
